
  NEW FEATURES

    HADOOP-8023. Add unset() method to Configuration (tucu)

    MAPREDUCE-4355. Add RunningJob.getJobStatus() (kkambatl via tucu)

    HADOOP-7823. Port HADOOP-4012 providing split support for bzip2 compressed
    files to branch-1. (Andrew Purtell via cdouglas)

    MAPREDUCE-987. Exposing MiniDFS and MiniMR clusters as a single process command-line (philip and ahmed via tucu)

  IMPROVEMENTS

    HDFS-3515. Port HDFS-1457 to branch-1. (eli)

    HDFS-3479. Port HDFS-3335 to branch-1. (Colin Patrick McCabe via eli)

    HDFS-3521. Check every byte at the end of edit log and allow namenode to
    tolerate corruption.  (szetszwo)

    HDFS-3604. Add dfs.webhdfs.enabled to hdfs-default.xml. (eli)

    HDFS-3596. Improve FSEditLog pre-allocation in branch-1
    (Colin Patrick McCabe via mattf)

    HDFS-3617. Port HDFS-96 to branch-1 (support blocks greater than 2GB).
    (Patrick Kling and harsh via eli)

    HADOOP-8586. Fixup a bunch of SPNEGO misspellings. (eli)

    HDFS-1957. Documentation for HFTP. (Ari Rabkin via eli)

    HDFS-3647. Backport HDFS-2868 (Add number of active transfer
    threads to the DataNode status) to branch-1 (harsh)

    MAPREDUCE-4415. Backport the Job.getInstance methods from
    MAPREDUCE-1505 to branch-1. (harsh)

    HADOOP-8617. Backport HADOOP-6148, HADOOP-6166 and HADOOP-7333 for a pure
    Java CRC32 calculator implementation.  (Brandon Li via szetszwo)

    HDFS-496. Backport: Use PureJavaCrc32 in HDFS.  (Brandon Li via szetszwo)

    HDFS-3667.  Add retry support to WebHdfsFileSystem.  (szetszwo)

  OPTIMIZATIONS

    HDFS-2533. Backport: Remove needless synchronization on some FSDataSet
    methods.  (Brandon Li via szetszwo)

  BUG FIXES

    HADOOP-8460. Document proper setting of HADOOP_PID_DIR and
    HADOOP_SECURE_DN_PID_DIR (bobby)

    MAPREDUCE-4195. With invalid queueName request param, jobqueue_details.jsp 
    shows NPE (jira.shegalov via tucu)
